--- a/index.html
+++ b/index.html
@@ -7,47 +7,64 @@
     <style>
         body {
             margin: 0;
-            overflow: hidden;
+            padding: 20px;
             background: #000;
             color: #fff;
             font-family: 'Courier New', monospace;
         }
-        #container {
-            position: relative;
-            width: 100vw;
-            height: 100vh;
+        #game-container {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
+            max-width: 800px;
+            margin: 0 auto;
         }
-        #glitchCanvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 1;
-        }
-        #content {
-            position: relative;
-            z-index: 2;
-            padding: 20px;
-        }
-        .terminal {
-            font-family: 'Courier New', monospace;
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
+        .card {
+            width: 100px;
+            height: 100px;
+            background: #333;
+            border: 2px solid #555;
             border-radius: 5px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            transition: all 0.3s ease;
         }
-        .ghost-message {
-            color: #00ff00;
-            text-shadow: 0 0 5px #00ff00;
+        .card.flipped {
+            background: #222;
+            border-color: #fff;
+        }
+        .card.matched {
+            background: #111;
+            border-color: #00ff00;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        #reset-button {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background: #333;
+            color: #fff;
+            border: 2px solid #555;
+            border-radius: 5px;
+            cursor: pointer;
+            text-align: center;
+        }
+        #reset-button:hover {
+            background: #222;
+            border-color: #fff;
         }
     </style>
 </head>
 <body>
-    <div id="container">
-        <canvas id="glitchCanvas"></canvas>
-        <div id="content">
-            <div class="terminal">
-                <h1>Room 404</h1>
-                <p>Welcome to the forgotten memory cache...</p>
-                <div id="memory-fragments"></div>
+    <h1>Room 404</h1>
+    <div id="game-container"></div>
+    <div id="reset-button" onclick="window.location.reload()">New Game</div>
                 <div id="ghost-messages"></div>
                 <div id="riddle"></div>
             </div>
