Enhance website with modern styling and animations

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h1>Diehard Hotel - Best Value Hotel Finder</h1>
         
         <div class="hotel-search">
-            <div class="search-form">
+            <div class="loading-spinner" id="loadingSpinner" style="display: none;"></div>n            <div class="search-form">
                 <select id="country">
                     <option value="">Select Country</option>
                     <option value="usa">United States</option>
