Enhance website with modern styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diehard Hotel - Best Value Hotel Finder</title>
@@ -103,7 +105,7 @@
         <h1>Diehard Hotel - Best Value Hotel Finder</h1>
         
         <div class="hotel-search">
-            <div class="loading-spinner" id="loadingSpinner" style="display: none;"></div>n            <div class="search-form">
+            <div class="loading-spinner" id="loadingSpinner" style="display: none;"></div>n            <div class="loading-spinner" id="loadingSpinner" style="display: none;"></div>n            <div class="search-form">
                 <select id="country">
                     <option value="">Select Country</option>
                     <option value="usa">United States</option>
